@@ -14,17 +14,17 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 fe82899d641f3af8f7224c8382bf2a078b6f54c4 Build.PL
-SHA1 e24f89d6932d8561ccac741f69ca0e273ac0d925 Changes
+SHA1 42773e5f09abfa71388389448389d1de224dea15 Build.PL
+SHA1 68e5c359bdc5268d38dcc872328cfd3940bb641e Changes
 SHA1 2b3ccb88f716f614f8af721a1c69dba0bcdbbb32 LICENSE
 SHA1 b95346cbcf7ebb4b7de608ac7c4b4dc36e6ff810 MANIFEST
-SHA1 55ba0a4418711ac0af35b43c8c6afa94a312a5d8 META.json
-SHA1 56e524ba5e32bd2dadf0d768d0447e07f9b46dad META.yml
-SHA1 468c558aeec23ebc8872f17cc506c4face9e9793 README
-SHA1 50a571f56ffa744f83a59c2aaf1172b259e6b8c4 inc/Bob.pm
-SHA1 729eb49f937d236522a9923cedab6a10d3e4eb4e inc/CPANTesting.pm
+SHA1 5dbb13dc4bedf6f2677205e8dc0419bc8b8b3fcf META.json
+SHA1 739ed0909531fcc4dac176af3a673b3d2da2bcfc META.yml
+SHA1 b5b8a21380a21ea23ca324f05f36f1c76f078b1e README
+SHA1 c9d93a6ddd04ad6ade84095f7c4941d01e191ece inc/Bob.pm
+SHA1 131242855e4780fa56d5b897e712feb742074a67 inc/CPANTesting.pm
 SHA1 3e461b4687dcea7680dc96761ecd703556759063 inc/SubClass.pm
-SHA1 e974622fd349c6dea4821e434c2d0416b6f1d3f8 lib/CatalystX/Usul.pm
+SHA1 3adf82a7d576ee9da83ee8063c704745b03e0ec5 lib/CatalystX/Usul.pm
 SHA1 66eaab11acafdcadb72543cc49c7bc109ec5a1f1 lib/CatalystX/Usul/Action.pm
 SHA1 9c64eb7bb0e5e432fa068af2145db9d7645e2fdc lib/CatalystX/Usul/Admin.pm
 SHA1 c3b34454b9204ae28e51d2bfb7af7130bb59932e lib/CatalystX/Usul/Authentication.pm
@@ -108,7 +108,7 @@ SHA1 60a690ee3a8d93e5893b4a09f818546c462c446f lib/CatalystX/Usul/View/HTML.pm
 SHA1 06889d0f2666cff5eec6d910ffb69b666712bd9e lib/CatalystX/Usul/View/JSON.pm
 SHA1 8a6d81ba9f37c43c9e1c8054d2efd1af9ecec8af lib/CatalystX/Usul/View/Serializer.pm
 SHA1 36dfca3713c7dc6acb5458979f71f514c9518307 lib/CatalystX/Usul/View/XML.pm
-SHA1 00f6a818eff27b3b99e8aee15fab5fcf9a43cb96 t/01always_pass.t
+SHA1 d197e3f0b7305c846e1f998ded6b4f437e64ce97 t/01always_pass.t
 SHA1 072f6d32d86d364df6b820ffda24b0efbece0676 t/02pod.t
 SHA1 fb0ae6e33e6618e9c7fcdacda7e13c7985fe614e t/03podcoverage.t
 SHA1 98a0921308147e3f3076dd23c9a586cd2fafc66c t/04critic.t
@@ -116,9 +116,9 @@ SHA1 8243ab97b625fb50deed1d9acd9a084a3f34025c t/05kwalitee.t
 SHA1 07a2eacf852afa5a4a5686ee211984501a827128 t/06yaml.t
 SHA1 3265140053840b093f495681f098d93f105921c0 t/07podspelling.t
 SHA1 0a66eece41ae00e51226b504447e7913bb232a9e t/10compile.t
-SHA1 d13ac6e02e03e093bf2c426e0b79d4d50de804a4 t/12schema.t
-SHA1 209f6a0d7e93ec334616583d58a65d6744d70a4b t/14config.t
-SHA1 3fc0fbb150c38a0ea727ed6a14b0e8a73f7c7adb t/20controller.t
+SHA1 51f5314c757f3599138193ffafda3ea7d34d960c t/12schema.t
+SHA1 fc67430b9f2dc25136c01145fbe689cc29fce016 t/14config.t
+SHA1 8515695de661b3d7cb372e6f6193bce707eb9631 t/20controller.t
 SHA1 654d5f6b713fe670a2b282fda729941f81774c22 t/critic.rc
 SHA1 46ec5806ad149ba05d4b9eab5e323a82ee1d570c t/default.json
 SHA1 aed04a47a3d4a49399f556333159777ff4a625d4 t/lib/MyApp.pm
@@ -131,11 +131,11 @@ SHA1 da39a3ee5e6b4b0d3255bfef95601890afd80709 t/users-simple.json
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.10 (GNU/Linux)
 
-iQEcBAEBAgAGBQJR+/+aAAoJEK492j4Im1BpVB0IAMPv7oi2ltoO50KmH789OxQ2
-J7bhQ4X2ICXicckeYdGOAEtxWtzsHfeH0PqubBbhud3Nuky3B1ZySiFcpd6LQivW
-uDhvphvFiCFgbxxHUV5gayZO6KnJWBz0hOhqWuCn0bQ45yXjcG/inT5Q7+/U+IpQ
-hTb/OJJiBLDFjIDikenv5FTqyCPKwt1M3PaphQbn1GlGOG0+3IAuHttKi4CcaXjD
-qylU2hwANR4V43FpLmVmCOnT7ejUUxBIMCucTWEV+0qthpBHSZJXECmuuH/+YYho
-E9zIl6g85sIL7b4t3D2l48elHAEpLF95ZdyojgjWKYgiG983+GqaFnZezzxxKt8=
-=pCMq
+iQEcBAEBAgAGBQJSApGLAAoJEK492j4Im1BpqUgH/30gX5sptlxBWn+P1oQx4EQj
+CA46u6ac6PW/yzt4yWIcYcY5xkgGXp9y0eQM2mW1s2RdrJnlL4gvGEUrZgO0T5gI
+NbvCekqVzA+j8JAiiTEF6a9MQUe9QzxeHYKLMFDCqjKO5Mw9ADh6Iv+QpMbzwhZ1
+XTQw6+PpvQGCkGztn3B5uTE1JI4iYP7y59B/rB3b1IhlSZqEUHkPRCuKDWT0uwy3
+P81ih+PvNXFeY07IubKK+4cMPVvxq1Aq0pHXvIsnZoaSme2ylMsS7ASL2OvEQVM9
+FuIhgABjO14CjbmrgEuU0Z88kluvzWB47GJhj1GdS+kayVwLVpVGOt34gaQkyjI=
+=09J5
 -----END PGP SIGNATURE-----
